# SimQC-Service

./: CMakeLists.txt  Dockerfile  README.md  run.sh
app/: CMakeLists.txt
app/include/api/: api_router.hpp
app/include/api/v1/: simulation_controller.hpp  simulation_routes.hpp
app/src/: main.cpp
app/src/api/: api_router.cpp
app/src/api/v1/: simulation_controller.cpp  simulation_routes.cpp
cfg/: channel_params.json  common.json  laser_params.json
example/: simple-bb84.cpp
include/: bb84.hpp  laser.hpp  pulse.hpp  sequence_generator.hpp  simulation_params.hpp  simulator.hpp
simqc/: CMakeLists.txt  Dockerfile
simqc/example/: README.md  simple-bb84.cpp
simqc/include/: bb84.hpp  beam_splitter.hpp  iprotocol.hpp  laser.hpp  modulator.hpp  photodetector.hpp  quantum_channel.hpp  simulation_params.hpp  test.hpp
simqc/src/: bb84.cpp  beam_splitter.cpp  laser.cpp  modulator.cpp  photodetector.cpp  quantum_channel.cpp  test.cpp
src/: bb84.cpp  laser.cpp  main.cpp  sequence_gen.cpp  simulator.cpp
